# ubion-open-agent

./: .env.example  .gitignore  AGENT.md  LICENSE  PROJECT_SPEC.md  README.ko.md  README.md
docs/: BUILDING_MACOS.md
engine/: NOTICE.md  __init__.py  run_demo.py
engine/core/: agent.py  budget.py  errors.py  prompt_builder.py  prompt_caching.py  retry.py  tool_dispatch.py  turn_setup.py
engine/learning/: context_compressor.py  context_engine.py  curator.py  memory_manager.py  memory_provider.py  model_metadata.py  redact.py
engine/llm/: anthropic.py  aux_client.py  deepseek.py  litellm_client.py  router.py
engine/server/: __main__.py  api.py
engine/skills/: __init__.py  _cfg_stub.py  commands.py  index.py  manager.py  preprocessing.py  usage.py  utils.py
research/: hermes-code-walkthrough.md  hermes-license-policy.md  hermes-message-interface.md  phase-0-retrospective.md  phase-0-setup.md  phase-0-todo.md  phase-0-usage-log.md  phase-1-demo-scenario-poet.md  phase-1-poet-skills-snapshot.md  phase-1-poet-startup.md  phase-1-poet-usage-log.md  phase-1-todo.md  phase-2-todo.md  phase-3-pc-install-guide.md  phase-3-todo.md  phase-4-todo.md  phase-roadmap.md  run-agent-split-plan.md  security-policy-check.md  skill-loop-port-feasibility.md
sandbox/: shell_smoke.py
src-tauri/: .gitignore  Cargo.toml  requirements.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: build-payload.ps1
src-tauri/src/: main.rs  supervisor.rs
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+91 files in other folders)
